[tool.poetry]
name = "min-server"
version = "1.0.1"
description = ""
authors = []
license = "MIT"


[tool.poetry.dependencies]
python = ">3.9, <3.10"
certifi = "2018.4.16"
chardet = "3.0.4"
idna = "2.6"
requests = "2.18.4"
six = "1.11.0"
urllib3 = "1.22"
websocket-client = "0.47.0"
pyyaml = "^3.13"
aiohttp = "^3.1.3"
python-socketio = "4.6.1"
pyserial = "3.5"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
